--- a/main.css
+++ b/main.css
@@ -111,3 +111,35 @@ margin-right: 2px;
   background-color:gray;
   border:black 1px;
 }
+
+/* End Bar */
+.endbar {
+  text-align: center;
+  background: #dcdcdc;
+}
+
+.pagination {
+  display: inline-block;
+  background: #dcdcdc;
+}
+
+.pagination button {
+  cursor: pointer;
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  border: 1px solid #ddd;
+  margin: 0 4px;
+}
+.pagination button.active {
+  background-color: #03a9f4;
+  color: white;
+  border: 1px solid #03a9f4;
+}
+
+.pagination button:hover:not(.active) {
+  background-color: #03a9f4;
+  color: white;
+}
