--- a/main.css
+++ b/main.css
@@ -37,6 +37,7 @@ html,body{
   height: 430px;
   width: 100%;
   background: #fff;
+  margin-left: 20px;
 
 }
 .list__item{
@@ -64,12 +65,15 @@ html,body{
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
   transition-property: width;
   transition-duration: 2s;
   transition-timing-function: linear;
   transition-delay: 1s;
   transform-origin: right;
+}
+.list__item:hover .picture img {
+  transform: scale(1.5);
 }
 .product-name{
   font-size: 1.2rem;
@@ -110,6 +114,74 @@ margin-right: 2px;
   object-fit: cover;
   background-color:gray;
   border:black 1px;
+}
+.list__item .product__item:hover .action li {
+  transform: translateX(0px);
+}
+.action {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+.action li {
+  position: relative;
+  list-style: none;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4px;
+  cursor: pointer;
+  transform: translateX(60px);
+  transition: transform 0.5s;
+}
+.action li:nth-child(2) {
+  transition-delay: 0.15s;
+}
+.action li:nth-child(3) {
+  transition-delay: 0.3s;
+}
+.action li span {
+  position: absolute;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%) translateX(-20px);
+  white-space: nowrap;
+  padding: 4px 6px;
+  background: #fff;
+  color: #333;
+  font-weight: 500;
+  font-size: 12px;
+  border-radius: 4px;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.5s r;
+}
+.action li:hover {
+  background: #ff2020;
+  color: #fff;
+}
+.action li:hover span {
+  opacity: 1;
+  transform: translateY(-50%) translateX(0px);
+}
+.action li span::before {
+  content: "";
+  position: absolute;
+  top: 50;
+  right: -4px;
+  width: 8px;
+  height: 8px;
+  background: #fff;
+  transform: translateX(-50%) rotate(45deg);
+}
+.product__item.hide {
+  display: none;
+  width: 0;
+  height: 0;
+  overflow: hidden;
 }
 
 /* End Bar */
